objects/Cancellation_Code_Badge_mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Badge__c</fullName>
        <label>Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cancellation Code - Badge mapping</label>
    <pluralLabel>Cancellation Code - Badge mappings</pluralLabel>
</CustomObject>